# agentic-workflow-engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.orchestrator  LICENSE  README.md  dag.yaml  docker-compose.yml  go.mod  go.sum  kafka_setup.py  main.go
cmd/orchestrator/: main.go
control_plane/: Dockerfile  go.mod  go.sum
control_plane/mock/: dag.yaml
control_plane/schemas/: 01_dag_registry.sql  02_nodes.sql  03_edges.sql  04_services.sql  05_permissions.sql  06_roles.sql  07_users.sql  08_dag_roles.sql
internal/config/: config.go
internal/dag/: dag.go
internals/config/: config.go
internals/dagconfig/: dagconfig.go
internals/kafka/: kafka.go
internals/router/: router.go
internals/s3bucket/: s3bucket.go
internals/server/: server.go
mock_service_1/: requirements.txt  streamlit_app.py
mock_service_1/app/: main.py
mock_service_2/: main.py  pyproject.toml
mock_service_2/app/: main.py
mock_service_3/: main.py  pyproject.toml  requirements.txt
mock_service_3/app/: main.py
mock_service_4/: pyproject.toml
mock_service_4/app/api/v1/: messages.py
mock_service_4/app/core/: config.py
mock_services/mock_service_1/: Dockerfile  pyproject.toml  requirements.txt
mock_services/mock_service_1/app/: main.py
mock_services/mock_service_1/app/models/: schemas.py
mock_services/mock_service_1/app/services/: items.py
schemas/: 02_nodes.sql  03_edges.sql
ui/: Dockerfile  README.md  app.py  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml
ui-react/: Dockerfile  package-lock.json  package.json
ui-react/src/: App.jsx  (+1 more)
(+82 files in other folders)
