[project]
name = "mock-service-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "kafka-python>=3.0.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
